{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "fae14746-2784-4a45-89e6-93818463c845",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "3024afed-e7b4-4a01-8874-33f103d47573",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBackward",
                    "type": "Button",
                    "id": "9a593724-8310-46d1-b2bf-7d97dc771a5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrafeLeft",
                    "type": "Button",
                    "id": "0b5a76e6-0a53-41d8-af4f-0b4aa5fd6072",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrafeRight",
                    "type": "Button",
                    "id": "ac87e599-b150-48cb-b0aa-934f24969fa2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "834dd390-d802-4b76-bf5c-0adbdeb1eb73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "56dbb914-97f8-49a0-b777-4a6c0c9505f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EnableMouseLook",
                    "type": "Button",
                    "id": "db757279-5253-4309-a572-cd2137ca32df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "9d494444-cf00-4336-8fc0-727fffb0c663",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "a567d7d9-fb03-475f-8d30-797862581114",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMap",
                    "type": "Button",
                    "id": "4423597f-43fb-4735-92a1-30d263e542d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenSpells",
                    "type": "Button",
                    "id": "c4c63fc5-184a-44eb-a6ae-846a4ecab3c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "113f7451-2097-49dd-8f2f-57cbcc37a94a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot0",
                    "type": "Button",
                    "id": "6f5a872d-79ea-4f8f-8d11-9dd423eb019b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot1",
                    "type": "Button",
                    "id": "1cf41101-841f-4b34-abfb-43e60601311f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot2",
                    "type": "Button",
                    "id": "4cec6d1b-5173-4eca-96e1-521f0f95278b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot3",
                    "type": "Button",
                    "id": "95e95198-41ac-4010-9084-1fb6ae512ee9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot4",
                    "type": "Button",
                    "id": "049cef2a-c574-4e0b-ac82-0aed0114508a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot5",
                    "type": "Button",
                    "id": "34b8cac8-64af-48b1-9ac3-35ca256b9d60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot6",
                    "type": "Button",
                    "id": "b4ca7064-7c21-48f8-90ac-48f988f3c812",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot7",
                    "type": "Button",
                    "id": "7a7468a4-0480-467a-bc84-e0e02435254b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot8",
                    "type": "Button",
                    "id": "39ee8b2a-530b-4e3e-a0a0-2e85f3ca099f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Slot9",
                    "type": "Button",
                    "id": "067fcf26-347b-4dfe-9f0b-7d2ead888dfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3019e521-63a1-4c06-8e0e-e9ed7656f6f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2e7c269-62c9-4584-88ef-c64164fc72aa",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "105b9810-7fa4-4cbc-8eda-701ef1bae56a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0baab83f-17af-4d21-b922-c50e9a966b07",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34c8b83f-24c2-46e7-97d6-e42f01a25dcb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "175f905f-00f6-44f8-9845-80566a21292c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f3ea7da-85fa-402a-aaae-ce3adebda624",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableMouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70a1f5a7-f4ae-483a-af20-c47fbffcc4ce",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89ffcc18-bad8-4193-bf27-50d1ee022c66",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11c9250c-1c61-48c3-a3a3-da1654440b17",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c3eb0ff-f358-4b33-a235-a83fdda3c774",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSpells",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fac669f4-4158-4a87-89dc-0e33ac77af43",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e181a39b-be07-4c79-88f6-786aba6fc059",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e46f72f-0692-4928-85f1-232a84b6ceb4",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15a46af2-08ae-4950-b743-1756b98bc061",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd0c92f7-ac41-4ab0-8670-e6067d43a4f6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bb2a35d-57e8-457b-8dab-e0afe2871f90",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb247907-807a-46f3-aba5-08a979efc4cd",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "986c3b28-9fd7-409f-bcfe-af16664b6c6f",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9857f3c-5627-4989-8f89-04811d7c0836",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4295f21c-3d89-4442-b1d6-f82100814546",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55acfaf5-6686-4bc9-9c9c-4044eada9cf1",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slot9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}